--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,8 +8,8 @@
   	<header class="main-header">
   	  <div class="container">
   	    <div class="main-page">
-  		  <a href="#">Barbershop</a>
-  		</div>
+  		    <a href="#">Barbershop</a>
+  		  </div>
   		<nav class="main-navigation">
   		  <ul>
   			<li>
@@ -56,22 +56,24 @@
 
   	  <div class="item_content">
   	    <div class="item_content_left">
-  	      <img class="main_picture" src="http://placehold.it/460x500" alt="Набор для путешествий Baxter of California">
-  	        <div class="picture_content">
-  	          <a href="#">
-  	            <img src="http://placehold.it/140x150" alt="Набор для путешествий Baxter of California">
-  	          </a>
-  	        </div>
-  	        <div class="picture_content">
+          <div class="main_picture">
+  	        <img  src="http://placehold.it/460x500" alt="Набор для путешествий Baxter of California">
+          </div>
+  	      <div class="picture_content">
   	        <a href="#">
-  	            <img src="http://placehold.it/140x150" alt="Набор для путешествий Baxter of California">
-  	          </a>
-  	        </div>
-  	        <div class="picture_content">
+  	          <img src="http://placehold.it/140x150" alt="Набор для путешествий Baxter of California">
+  	        </a>
+  	      </div>
+  	      <div class="picture_content">
   	        <a href="#">
-  	            <img src="http://placehold.it/140x150" alt="Набор для путешествий Baxter of California">
-  	          </a>
-  	        </div>
+  	          <img src="http://placehold.it/140x150" alt="Набор для путешествий Baxter of California">
+  	        </a>
+  	      </div>
+  	      <div class="picture_content">
+  	        <a href="#">
+  	          <img src="http://placehold.it/140x150" alt="Набор для путешествий Baxter of California">
+  	        </a>
+  	      </div>
   	    </div>
   	    <div class="item_content_right">
   	      <b class="availability">Есть в наличии</b>
@@ -86,7 +88,7 @@
   	  	    <a href="#">Купить</a>
   	  	  </div>
   	  	  <div class="item_structure">
-  	  	    <h2>В набор входят:</h2>
+  	  	    <h2 class="item_structure_name">В набор входят:</h2>
   	  	    <ul>
   	  	      <li>Средство для умывания (50 мл)</li>
   	  	      <li>Увлажняющий крем (50 мл)</li>
