--- a/catalog.html
+++ b/catalog.html
@@ -51,7 +51,7 @@
   	  	</ul>
   	  </div>
 
-  	  <div class="catalog_filter">
+  	  <aside class="catalog_filter">
   	  	<form action="#" method="get">
   	  	  <p class="filter_name">Производители</p>
   	  	  <div class="filter_item">
@@ -101,9 +101,9 @@
   	  	  	<input type="submit" value="Показать">
   	  	  </div>
   	  	</form>
-  	  </div>
+  	  </aside>
 
-  	  <div class="catalog_menu">
+  	  <div class="catalog_group">
   	  	<article class="catalog_item">
   	  	  <img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California">
   	  	  <p class="item_name">
